--- a/Pastelerias/views/homepage.ejs
+++ b/Pastelerias/views/homepage.ejs
@@ -1,1 +1,38 @@
-<h1>soy el home</h1>
+<div class="col-sm-12">
+    <div class="jumbotron">
+        <h2>Catalogo de la Pasteleria X</h2>
+    </div>
+    <div class="col-xs-6 col-lg-4" align="center">
+        <h3>Heading</h3>
+        <p>tienpo de preparacion: 2 horas</p>
+        <div class="btn-group btn-group-sm" role="group">
+            <a href="/editarPastel" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
+        </div>
+    </div>
+    <div class="col-xs-6 col-lg-4" align="center">
+        <h3>Heading</h3>
+        <p>tienpo de preparacion: 2 horas</p>
+        <div class="btn-group btn-group-sm" role="group">
+            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
+        </div>
+    </div>
+    <div class="col-xs-6 col-lg-4" align="center">
+        <h3>Heading</h3>
+        <p>tienpo de preparacion: 2 horas</p>
+        <div class="btn-group btn-group-sm" role="group">
+            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
+        </div>
+    </div>
+    <div class="col-xs-6 col-lg-4" align="center">
+        <h3>Heading</h3>
+        <p>tienpo de preparacion: 2 horas</p>
+        <div class="btn-group btn-group-sm" role="group">
+            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
+        </div>
+    </div>
+
+</div>
