--- a/Pastelerias/views/homepage.ejs
+++ b/Pastelerias/views/homepage.ejs
@@ -1,38 +1,9 @@
 <div class="col-sm-12">
     <div class="jumbotron">
-        <h2>Catalogo de la Pasteleria X</h2>
+        <h1>¡Bienvenidos!</h1>
+        <h2>Sistema de catálogo de pastelerias</h2>
+        <p>Selecciona una pasteleria para ver los pasteles que prepara</p>
+        <br>
+        <p>Para agregar una nueva pasteleria o pastel dirigirse a la barra de navegación</p>
     </div>
-    <div class="col-xs-6 col-lg-4" align="center">
-        <h3>Heading</h3>
-        <p>tienpo de preparacion: 2 horas</p>
-        <div class="btn-group btn-group-sm" role="group">
-            <a href="/editarPastel" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
-        </div>
-    </div>
-    <div class="col-xs-6 col-lg-4" align="center">
-        <h3>Heading</h3>
-        <p>tienpo de preparacion: 2 horas</p>
-        <div class="btn-group btn-group-sm" role="group">
-            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
-        </div>
-    </div>
-    <div class="col-xs-6 col-lg-4" align="center">
-        <h3>Heading</h3>
-        <p>tienpo de preparacion: 2 horas</p>
-        <div class="btn-group btn-group-sm" role="group">
-            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
-        </div>
-    </div>
-    <div class="col-xs-6 col-lg-4" align="center">
-        <h3>Heading</h3>
-        <p>tienpo de preparacion: 2 horas</p>
-        <div class="btn-group btn-group-sm" role="group">
-            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
-        </div>
-    </div>
-
 </div>
