--- a/Pastelerias/views/Pastelerias/EditarPasteleria.ejs
+++ b/Pastelerias/views/Pastelerias/EditarPasteleria.ejs
@@ -1,1 +1,37 @@
-<h1>Editar Pasteleria</h1>
+<div class="col-sm-12">
+    <h1>Editar Pasteleria</h1>
+    <form class="form-horizontal" action="" method="post">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Nombre:</label>
+            <div class="col-sm-10">
+                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Ciudad</label>
+            <div class="col-sm-10">
+                <input type="text" name="ciudad" class="form-control" placeholder="Ciudad en la que se encuentra la pasteleria">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Ciudad</label>
+            <div class="col-sm-10">
+                <input type="text" name="correo" class="form-control" placeholder="Correo de la pasteleria">
+            </div>
+        </div>
+        <br>
+        <div class="form-group">
+            <div class="col-md-offset-4 col-md-4">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a href="/home"><button type="button" class="btn btn-default">Cancelar</button></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
