--- a/Pastelerias/views/Pasteles/CrearPastel.ejs
+++ b/Pastelerias/views/Pasteles/CrearPastel.ejs
@@ -1,1 +1,48 @@
-<h1>Crear Pastel</h1>
+<div class="col-sm-12">
+    <h1>Crear Pastel</h1>
+    <form class="form-horizontal" action="" method="post">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">Nombre:</label>
+            <div class="col-sm-8">
+                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">Tiempo de elaboración</label>
+            <div class="col-sm-8">
+                <input type="number" name="ciudad" class="form-control" placeholder="Tiempo que se demora en preparar">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">Foto</label>
+            <div class="col-sm-8">
+                <input type="text" name="correo" class="form-control" placeholder="Url de la foto de como se ve">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-4 control-label">Pasteleria que lo prepara</label>
+            <div class="col-sm-8">
+                <select class="form-control" name="PasteleriaPrepara">
+                    <option value=""></option>
+                    <% for(var i=0; i<pastelerias.length; i++){ %>
+                    <option value="<%= pastelerias[i].idPasteleria%>">Pasteleria <%= pastelerias[i].nombrePasteleria%></option>
+                    <% } %>
+                </select>
+            </div>
+        </div>
+        <br>
+        <div class="form-group">
+            <div class="col-md-offset-4 col-md-4">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a href="/home"><button type="button" class="btn btn-default">Cancelar</button></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
