--- a/Pastelerias/views/layout.ejs
+++ b/Pastelerias/views/layout.ejs
@@ -63,19 +63,18 @@
                 <div class="col-xs-6 col-sm-5 sidebar-offcanvas" id="sidebar">
                     <div class="col-xs-8">
                         <div class="list-group">
-                            <a href="#" class="list-group-item active"> <font size=4>Pasteleria <span class="glyphicon glyphicon-triangle-left"></span></font></a>
-                            <a href="#" class="list-group-item"><font size=4>Pasteleria</font> </a>
+                            <% for(var i=0; i<pastelerias.length; i++){ %>
+                            <a href="/pasteles?idPasteleria=<%= pastelerias[i].idPasteleria%>" class="list-group-item <%= (pasteleriaActual == pastelerias[i].idPasteleria) ? 'active' :''%>"> <font size=4>Pasteleria <%= pastelerias[i].nombrePasteleria%> <span class="<%= (pasteleriaActual == pastelerias[i].idPasteleria) ? 'glyphicon glyphicon-triangle-left' :''%>"></span></font></a>
+                            <% }%>
                         </div>
                     </div>
                     <div class="col-xs-4">
+                        <% for(var i=0; i<pastelerias.length; i++){ %>
                         <div class="btn-group btn-group-lg" role="group">
                             <a href="/editarPasteleria" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
                             <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
                         </div>
-                        <div class="btn-group btn-group-lg" role="group">
-                            <a href="" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-                            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
-                        </div>
+                        <% }%>
                     </div>
 
                 </div><!--/.sidebar-offcanvas-->
