--- a/Pastelerias/views/Pastelerias/CrearPasteleria.ejs
+++ b/Pastelerias/views/Pastelerias/CrearPasteleria.ejs
@@ -1,10 +1,10 @@
 <col-sm-12>
     <h1>Crear Pasteleria</h1>
-    <form class="form-horizontal" action="" method="post">
+    <form class="form-horizontal" action="Pasteleria/crearPasteleria" method="post">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+                <input type="text" name="nombrePasteleria" class="form-control" placeholder="Nombre de la Pasteleria">
             </div>
         </div>
         <div class="form-group">
@@ -22,7 +22,7 @@
         <br>
         <div class="form-group">
             <div class="col-md-offset-4 col-md-4">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group btn-group-justified" role="group">
                     <div class="btn-group" role="group">
                         <button type="submit" class="btn btn-primary">Guardar</button>
                     </div>
