--- a/Pastelerias/views/Pastelerias/EditarPasteleria.ejs
+++ b/Pastelerias/views/Pastelerias/EditarPasteleria.ejs
@@ -1,28 +1,29 @@
 <div class="col-sm-12">
     <h1>Editar Pasteleria</h1>
-    <form class="form-horizontal" action="" method="post">
+    <form class="form-horizontal" action="Pasteleria/editarPasteleria" method="post">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+                <input type="hidden" name="idPasteleria" value="<%= pasteleria.idPasteleria%>">
+                <input type="text" name="nombrePasteleria" class="form-control" placeholder="Nombre de la Pasteleria" value="<%= pasteleria.nombrePasteleria%>">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Ciudad</label>
             <div class="col-sm-10">
-                <input type="text" name="ciudad" class="form-control" placeholder="Ciudad en la que se encuentra la pasteleria">
+                <input type="text" name="ciudad" class="form-control" placeholder="Ciudad en la que se encuentra la pasteleria" value="<%= pasteleria.ciudad%>">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Ciudad</label>
             <div class="col-sm-10">
-                <input type="text" name="correo" class="form-control" placeholder="Correo de la pasteleria">
+                <input type="text" name="correo" class="form-control" placeholder="Correo de la pasteleria" value="<%= pasteleria.correo%>">
             </div>
         </div>
         <br>
         <div class="form-group">
             <div class="col-md-offset-4 col-md-4">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                <div class="btn-group btn-group-justified" role="group">
                     <div class="btn-group" role="group">
                         <button type="submit" class="btn btn-primary">Guardar</button>
                     </div>
