--- a/Pastelerias/views/Pasteles/CrearPastel.ejs
+++ b/Pastelerias/views/Pasteles/CrearPastel.ejs
@@ -1,22 +1,22 @@
 <div class="col-sm-12">
     <h1>Crear Pastel</h1>
-    <form class="form-horizontal" action="" method="post">
+    <form class="form-horizontal" action="Pastel/crearPastel" method="post">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Nombre:</label>
             <div class="col-sm-8">
-                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+                <input type="text" name="nombrePastel" class="form-control" placeholder="Nombre del Pastel">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Tiempo de elaboración</label>
             <div class="col-sm-8">
-                <input type="number" name="ciudad" class="form-control" placeholder="Tiempo que se demora en preparar">
+                <input type="number" name="tmpElaboracion" class="form-control" placeholder="Tiempo que se demora en preparar">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Foto</label>
             <div class="col-sm-8">
-                <input type="text" name="correo" class="form-control" placeholder="Url de la foto de como se ve">
+                <input type="text" name="urlFoto" class="form-control" placeholder="Url de la foto de como se ve">
             </div>
         </div>
         <div class="form-group">
