--- a/Pastelerias/views/Pasteles/EditarPastel.ejs
+++ b/Pastelerias/views/Pasteles/EditarPastel.ejs
@@ -1,31 +1,33 @@
 <div class="col-sm-12">
     <h1>EditarPastel</h1>
-    <form class="form-horizontal" action="" method="post">
+    <form class="form-horizontal" action="Pastel/editarPastel" method="post">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Nombre:</label>
             <div class="col-sm-8">
-                <input type="text" name="nombrePateleria" class="form-control" placeholder="Nombre de la Pasteleria">
+                <input type="hidden" name="idPastel" value="<%= pastel.idPastel%>">
+                <input type="text" name="nombrePastel" class="form-control" placeholder="Nombre del Pastel" value="<%= pastel.nombrePastel%>">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Tiempo de elaboración</label>
             <div class="col-sm-8">
-                <input type="number" name="ciudad" class="form-control" placeholder="Tiempo que se demora en preparar">
+                <input type="number" name="tmpElaboracion" class="form-control" placeholder="Tiempo que se demora en preparar" value="<%= pastel.tmpElaboracion%>">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-4 control-label">Foto</label>
             <div class="col-sm-8">
-                <input type="text" name="correo" class="form-control" placeholder="Url de la foto de como se ve">
+                <input type="text" name="urlFoto" class="form-control" placeholder="Url de la foto de como se ve" value="<%= pastel.urlFoto%>">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-4 control-label">Pasteleria que lo prepara</label>
             <div class="col-sm-8">
-                <select class="form-control" name="grupoMateria">
+                <select class="form-control" name="PasteleriaPrepara">
                     <option value=""></option>
-                    <option value="Sin Grupo">Pasteleria 1</option>
-                    <option value="GR1">Pasteleria 2</option>
+                    <% for(var i=0; i<pastelerias.length; i++){ %>
+                    <option value="<%= pastelerias[i].idPasteleria%>" <%= (pastel.PasteleriaPrepara == pastelerias[i].idPasteleria) ? 'selected' :''%>>Pasteleria <%= pastelerias[i].nombrePasteleria%></option>
+                    <% } %>
                 </select>
             </div>
         </div>
@@ -37,7 +39,7 @@
                         <button type="submit" class="btn btn-primary">Guardar</button>
                     </div>
                     <div class="btn-group" role="group">
-                        <a href="/home"><button type="button" class="btn btn-default">Cancelar</button></a>
+                        <a href="/pasteles?idPasteleria=<%= pastel.PasteleriaPrepara%>"><button type="button" class="btn btn-default">Cancelar</button></a>
                     </div>
 
                 </div>
