--- a/Pastelerias/views/layout.ejs
+++ b/Pastelerias/views/layout.ejs
@@ -71,8 +71,8 @@
                     <div class="col-xs-4">
                         <% for(var i=0; i<pastelerias.length; i++){ %>
                         <div class="btn-group btn-group-lg" role="group">
-                            <a href="/editarPasteleria" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-                            <a href="" type="button" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-remove"></span></a>
+                            <a href="/editarPasteleria?idPasteleria=<%= pastelerias[i].idPasteleria%>" data-toggle="tooltip" title="Editar Pasteleria" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+                            <a href="/Pasteleria/borrarPasteleria?idPasteleria=<%= pastelerias[i].idPasteleria%>" data-toggle="tooltip" title="Eliminar Pasteleria" type="button" role="button" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span></a>
                         </div>
                         <% }%>
                     </div>
