--- a/Pastelerias/views/Pastelerias/CrearPasteleria.ejs
+++ b/Pastelerias/views/Pastelerias/CrearPasteleria.ejs
@@ -2,7 +2,7 @@
     <h1>Crear Pasteleria</h1>
     <form class="form-horizontal" action="Pasteleria/crearPasteleria" method="post">
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Nombre:</label>
+            <label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
             <div class="col-sm-10">
                 <input type="text" name="nombrePasteleria" class="form-control" placeholder="Nombre de la Pasteleria">
             </div>
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Ciudad</label>
+            <label for="inputEmail3" class="col-sm-2 control-label">Correo</label>
             <div class="col-sm-10">
                 <input type="text" name="correo" class="form-control" placeholder="Correo de la pasteleria">
             </div>
