--- a/Pastelerias/views/Pasteles/CrearPastel.ejs
+++ b/Pastelerias/views/Pasteles/CrearPastel.ejs
@@ -2,7 +2,7 @@
     <h1>Crear Pastel</h1>
     <form class="form-horizontal" action="Pastel/crearPastel" method="post">
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-4 control-label">Nombre:</label>
+            <label for="inputEmail3" class="col-sm-4 control-label">Nombre</label>
             <div class="col-sm-8">
                 <input type="text" name="nombrePastel" class="form-control" placeholder="Nombre del Pastel">
             </div>
