--- a/Pastelerias/views/error.ejs
+++ b/Pastelerias/views/error.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-offset-1 col-md-11">
     <div class="row">
         <div class="panel panel-danger">
             <div class="panel-heading">
